# CmakeCplusplusHelloworld

./: CMakeLists.txt  README.md  hello.cpp  helloexec  main.cpp  mymakescript.sh
